--- a/pages/component/details/details.wxss
+++ b/pages/component/details/details.wxss
@@ -20,9 +20,19 @@
 .main{
   height: 100%;
   padding: 0 10rpx;
-  background-color: #EDEDED;
+  background-color: #fff;
 }
-
+.food-detail-xq{
+  border-top: 1rpx solid #e1e1e1;
+  padding-top: 10rpx;
+  background-color: #fff;
+}
+.food-detail-xq swiper{
+  width:550rpx;
+  height:550rpx;
+  display:block;
+  margin:0 auto 10rpx auto;
+}
 
 .good-box{
   width: 100%;
@@ -83,9 +93,10 @@
   margin-bottom: 8rpx;
 }
 .food-xq{
-  padding: 20rpx 0;
+  padding: 10rpx 0;
   background-color: #EDEDED;
   position: relative;
+  margin-bottom: 10rpx;
 }
 .food-xq text{
   display: block;
