--- a/app.wxss
+++ b/app.wxss
@@ -55,7 +55,7 @@ page {
   width: 550rpx;
   height: 550rpx;
   display: block;
-  margin: 0 auto 10rpx auto;
+  /*margin: 0 auto 10rpx auto;*/
 }
 /* page */
 .container {
@@ -75,28 +75,35 @@ page {
   justify-content:space-between;
   align-items: center;
 }
-.topbar image {
-  width: 180rpx;
-  height: 150rpx;
+.topbar-title image {
+  width: 120rpx;
+  height: 90rpx;
+  vertical-align: top;
+  line-height: 90rpx;
 }
 .top-tele image{
-  width: 100rpx;
-  height: 100rpx;
+  width: 70rpx;
+  height: 70rpx;
 }
 .topbar text {
   display: block;
-  font-weight: bold;
+  font-weight: bold; 
+  margin-left: 10rpx;
 }
-.topbar>text{
-  font-size: 45rpx;
+.topbar-title>text{
+  display: inline-block;
+  font-size: 48rpx;
+  line-height: 90rpx;
 }
 .top-tele{
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 .top-tele view text:first-child{
   color: #959595;
   margin-top: 10rpx;
+  font-size: 24rpx;
 }
 .c-minheight {
   min-height: 80px;
