--- a/pages/component/category2/category.wxss
+++ b/pages/component/category2/category.wxss
@@ -23,6 +23,14 @@
   /*padding: 0 10rpx;*/
 }
 
+.nav{
+  height: 13% !important;
+}
+.categroy{
+  height: 100%;
+  border-top: 1rpx solid #e9e9e9;
+}
+
 .categroy-left{
   display: inline-block;
   width: 25%;
@@ -38,8 +46,12 @@
   line-height: 70rpx;
   box-sizing: border-box;
   border-bottom: 1rpx solid #e9e9e9;
+  border-right: 4rpx solid transparent;
 }
-
+.scroll-view-left-item.on{
+  border-right: 4rpx solid #c71f3b;
+  color: #c71f3b;
+}
 
 
 .categroy-right{
@@ -47,24 +59,37 @@
   width: 75%;
   height: 100%;
   box-sizing: border-box;
-  border: 1rpx solid #e9e9e9;
+  /*border: 1rpx solid #e9e9e9;*/
   text-align: left;
 }
 .scroll-view-right-item{
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0 10rpx;
+  padding:10rpx;
+  height: 250rpx;
+  align-content: center;
+  border-bottom: 1rpx solid #e9e9e9;
 }
 .right-item-img{
   width: 200rpx;
   height: 200rpx;
   background-color: #eee;
+  flex-shrink: 0;
 }
 .right-item-view{
-  /*height: 400rpx;
-  background-color: #eee;
-  overflow: hidden;*/
+  margin-left: 10rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.right-item-view text{
+  display: block;
+  height: 66rpx;
+  line-height: 66rpx;
+  overflow:hidden;
+  text-overflow:ellipsis;
+
 }
 
 
