底部版权、详情、下单日期、微信昵称等修改

--- a/pages/component/details/details.wxml
+++ b/pages/component/details/details.wxml
@@ -1,6 +1,6 @@
 <import src="../../common/nav.wxml" />
 <view class="main">
-  <template is="nav" data="{{website_name}}"/>
+  <template is="nav" data="{{config}}"/>
   <view class="good-box">
     <view class="good-tab-box">
       <text class="goods-tab-nav {{curIndex === 0 ?'on':''}}" bindtap="bindTap" data-index="0">
