--- a/pages/component/cart/cart.wxss
+++ b/pages/component/cart/cart.wxss
@@ -71,7 +71,8 @@
     padding:0 0rpx 0 80rpx;
     box-sizing: border-box;
     /*display: flex;*/
-    border-top: 1rpx solid #ddd;
+    border-top: 1rpx solid #e9e9e9;
+    background-color: #fff;
     /*flex-direction: row;
     justify-content: space-between;*/
 }
@@ -96,6 +97,9 @@
   display:inline-block;
   height:100rpx;
   line-height:100rpx;
+}
+.cart-toatl-price{
+    color: #b5b5b5;
 }
 .cart-toatl-price text{
   color:#c71f3b;
