--- a/pages/component/category/category.wxml
+++ b/pages/component/category/category.wxml
@@ -1,36 +1,45 @@
-<import src="../../common/nav.wxml" />
+<!--<import src="../../common/nav.wxml" />-->
 <import src="../../common/prompt.wxml" />
-<import src="../../common/productList2.wxml" />
+<!--<import src="../../common/productList2.wxml" />-->
 <view class="main">
-  <template is="nav" data="{{config}}" />
-  <!--<view class="categroy-top bg_color">
-    <view class="categroy-fir-list" wx:for="{{goods}}" wx:for-item="first_level"  data-index="{{index}}">
-      <view class="categroy-fir-list-name">
-        <view class="navigator-text">产品分类</view>
-        <view class="navigator-arrow"></view>
-      </view>
-      <view class="categroy-sec-list">
-        <view wx:for="{{category}}" data-id="{{item.id}}" class="categroy-sec-list-name"  bindtap="switchTab">
-          {{item.name}}
-        </view>
-      </view>
-    </view>
-  </view>-->
-
-  <view class="categroy-content">
+  <!--<template is="nav" data="{{config}}" />-->
+  <!--<view class="categroy-content">
     <view class="categroy-content-list {{curIndex == index ? 'on' : ''}}" wx:for="{{category}}" data-id="{{item.id}}" data-index="{{index}}" bindtap="switchTab">
       <view class="navigator-text">{{item.name}}</view>
       <view class="navigator-arrow"></view>
     </view>
+  </view>-->
+
+  <view class="categroy">
+    <view class="categroy-left">
+      <scroll-view scroll-y style="height:100%;" scroll-with-animation>
+        <view class="medium_font scroll-view-left-item {{curIndex == index ? 'on' : ''}}" wx:for="{{category}}" data-id="{{item.id}}" data-index="{{index}}" bindtap="switchTab">{{item.name}}</view>
+      </scroll-view>
+    </view>
+
+    <view class="categroy-right">
+      <scroll-view scroll-y style="height:100%;"  bindscrolltolower="reachBottom" scroll-with-animation>
+        <navigator wx:for="{{products}}" wx:key="{{index}}" url="../details/details?id={{item.id}}" class="scroll-view-right-item">
+          <image mode="aspectFit" class="right-item-img" src="{{item.doc_image}}"/>
+          <view class="right-item-view">
+            <text class="right-item-view-title medium_font color">{{item.title}}</text>
+            <text class="right-item-view-title small_font">￥{{item.mark_price}}</text>
+            <text class="right-item-view-title medium_font color">￥{{item.price}}</text>
+            <text class="right-item-view-title small_font">{{item.intro}}</text>
+          </view>
+        </navigator>
+        <template is="prompt" data="{{prompt}}"></template>
+      </scroll-view>
+      
+    </view>
   </view>
 
 
 
-  <view class="categroy-bottom">
+  <!--<view class="categroy-bottom">
     <view class="good-all">
       <template is="product_list2" data="{{products}}" />
-      <!--<view wx:if="{{products.length}}" class="load_more" bindtap="load_more">加载更多</view>-->
     </view>
     <template is="prompt" data="{{prompt}}"></template>
-  </view>
+  </view>-->
 </view>
