--- a/pages/component/category/category.wxss
+++ b/pages/component/category/category.wxss
@@ -1,6 +1,4 @@
-/*@import '../../common/common.wxss';*/
-
-.navigator-arrow {
+/*.navigator-arrow {
   padding-right: 26rpx;
   position: relative;
 }
@@ -17,59 +15,119 @@
   top: 50%;
   margin-top: -45rpx;
   right: 28rpx;
-}
+}*/
 
 
 .main{
-    height: 100%;
-    padding: 0 10rpx;
+  height: 100%;
+  /*padding: 0 10rpx;*/
 }
-/*.categroy-top{
-  padding: 15rpx;
+
+.nav{
+  height: 13% !important;
 }
-.categroy-fir-list{
-  padding: 10rpx;
-  border-top: 1rpx solid #fff;
+.categroy{
+  height: 100%;
+  border-top: 1rpx solid #e9e9e9;
 }
-.categroy-fir-list:first-child{
-  border-top: none;
-  padding-left: 0;
-}
-.categroy-fir-list-name{
-  color: #ffe401;
-}
-.categroy-fir-list-name:hover,.categroy-sec-list-name:hover{
-  color: #F15433;
-}
-.categroy-sec-list-name{
-  color:#fff;
-}
-.categroy-sec-list-name{
-  font-size: 26rpx;
-  height: 26rpx;
-  line-height: 26rpx;
+
+.categroy-left{
   display: inline-block;
-  padding: 0 10rpx;
-  border-left: 1rpx solid #fff;
+  width: 25%;
+  height: 100%;
+  box-sizing: border-box;
+  border-right: 1rpx solid #e9e9e9;
+  /*padding: 0 10rpx;*/
+  box-sizing: border-box;
 }
-.categroy-sec-list-name:first-child{
-  border-left: none;
+.scroll-view-left-item{
+  text-align: center;
+  height: 80rpx;
+  line-height: 80rpx;
+  box-sizing: border-box;
+  border-bottom: 1rpx solid #e9e9e9;
+  border-right: 4rpx solid transparent;
+}
+.scroll-view-left-item.on{
+  border-right: 4rpx solid #c71f3b;
+  color: #c71f3b;
+}
+
+
+.categroy-right{
+  display: inline-block;
+  width: 75%;
+  height: 100%;
+  box-sizing: border-box;
+  /*border: 1rpx solid #e9e9e9;*/
+  text-align: left;
+}
+.scroll-view-right-item{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding:10rpx;
+  height: 250rpx;
+  align-content: center;
+  border-bottom: 1rpx solid #e9e9e9;
+}
+.right-item-img{
+  width: 200rpx;
+  height: 200rpx;
+  background-color: #eee;
+  flex-shrink: 0;
+}
+.right-item-view{
+  margin-left: 10rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.right-item-view text{
+  display: block;
+  height: 50rpx;
+  line-height: 50rpx;
+  overflow:hidden;
+  text-overflow:ellipsis;
+}
+.right-item-view text:nth-child(2){
+  text-decoration: line-through;
+  color: #898989;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*.categroy-bottom{
+  padding-top: 20rpx;
 }*/
 
-.categroy-bottom{
-  padding-top: 20rpx;
-}
-
-.load_more{
+/*.load_more{
   text-align: center;
   border: 1px solid #eee;
   font-size: 30rpx;
   padding: 10rpx;
   line-height: 80rpx;
   width: 100%;
-}
+}*/
 
-.categroy-content-list{
+/*.categroy-content-list{
   height: 70rpx;
   line-height: 70rpx;
   color: #282828;
@@ -81,4 +139,4 @@
 }
 .categroy-content-list:last-child{
   border-bottom: 1rpx solid #e9e9e9;
-}
+}*/
