--- a/pages/component/order-list/order-list.wxss
+++ b/pages/component/order-list/order-list.wxss
@@ -28,7 +28,7 @@
     border-bottom: 6rpx solid #c71f3b;
 }
 .orders-box{
-    color: #999;
+    /*color: #999;*/
     font-size: 28rpx;
 }
 .orders{
