--- a/pages/component/order_detail/order_detail.wxss
+++ b/pages/component/order_detail/order_detail.wxss
@@ -9,7 +9,7 @@
   background-color: #ededed;
 }
 .confirm-box{
-    color: #999;
+    /*color: #999;*/
     font-size: 28rpx;
     background-color: #fff;
     padding-left: 30rpx;
@@ -103,11 +103,11 @@
   border: 1rpx solid transparent;
 }
 .pay_way image.active{
-  border: 1rpx solid #f00;
+  border: 1rpx solid #c71f3b;
 }
 .pay_way image.active::after{
   position: absolute;
-  background-color: #f00;
+  background-color: #c71f3b;
   right: -10px;
   top: -10px;
   transform: rotate(45deg);
@@ -177,7 +177,7 @@
     top: 35rpx;
     height: 120rpx;
     line-height: 120rpx;
-    color: #b42f2d;
+    color: #c71f3b;
 }
 .orders-footer{
     height: 60rpx;
@@ -196,4 +196,10 @@
     text-align: center;
     font-size: 26rpx;
     /*display: inline-block;*/
+}
+.order-status-content{
+  width: 100%;
+  height: 200rpx;
+  line-height: 200rpx;
+  padding-left: 40rpx;
 }
