--- a/pages/component/order_detail/order_detail.wxml
+++ b/pages/component/order_detail/order_detail.wxml
@@ -21,10 +21,10 @@
 
   <view class="orders-list confirm-box">
     <view class="orders-number color2">订单编号：{{order.oid}}</view>
-    <navigator url="/page/component/details/details" class="orders-detail">
-        <image src="{{product.url}}"></image>
-        <view class="">{{product.product_name}}</view>
-        <view class="">￥{{product.price}} x <text class="color2" style="font-size:26rpx;">{{product.amount}}</text></view>
+    <navigator wx:for="{{product}}" url="../details/details?id={{item.product_id}}" class="orders-detail">
+        <image src="{{item.product_thumb}}"></image>
+        <view class="">{{item.product_name}}</view>
+        <view class="">￥{{item.price}} x <text class="color2" style="font-size:26rpx;">{{item.amount}}</text></view>
         <!--<text wx:if="{{order.pay_status==1}}" class="orders-status">待付款</text>
         <text wx:else class="orders-status">已支付</text>-->
     </navigator>
