--- a/pages/component/user/user.wxml
+++ b/pages/component/user/user.wxml
@@ -51,7 +51,7 @@
             <navigator url="../order_detail/order_detail?oid={{item.oid}}" class="orders-detail">
                 <image src="{{order_pro_rel[item.id][0].picurl}}"></image>
                 <view class="">{{order_pro_rel[item.id][0].product_name}}</view>
-                <view class="">￥{{item.price}} x <text class="color2" style="font-size:26rpx;">{{item.amount}}</text></view>
+                <view class="">￥{{item.total_amount}} x <text class="color2" style="font-size:26rpx;">{{order_pro_rel[item.id][0].amount}}</text></view>
                 <text wx:if="{{item.order_status_no==1}}" class="orders-status">待付款</text>
                 <text wx:elif="{{item.order_status_no==2}}" class="orders-status">已支付</text>
                 <text wx:else="{{item.order_status_no==5}}" class="orders-status">订单取消</text>
