--- a/app.wxss
+++ b/app.wxss
@@ -3,10 +3,11 @@
 page {
   background-color: #F8F8F8;
   height: 100%;
+  width: 100%;
   font-size: 32rpx;
   line-height: 1.6;
   color: #383838;
-  
+  overflow-x: hidden;
 }
 /* lib */
 .border-color{border-color:#898989;} 
@@ -33,6 +34,12 @@ page {
   white-space:nowrap;
   overflow:hidden;
   text-overflow:ellipsis;
+}
+.border_bottom{
+  border-bottom: 1rpx solid #e9e9e9;
+}
+.border_bottom2{
+  border-bottom: 20rpx solid #e9e9e9;
 }
 /*.smallImg{
   width:100%;
@@ -95,6 +102,7 @@ page {
   display: inline-block;
   font-size: 48rpx;
   line-height: 90rpx;
+  color: #313131;
 }
 .top-tele{
   display: flex;
@@ -224,7 +232,7 @@ page {
 
 
 
-.product-nav2{
+/*.product-nav2{
   background-color: rgb(90, 90, 90);
 }
 .product-nav2 .product-name{
@@ -232,4 +240,4 @@ page {
 }
 .product-nav2 .product-dec{
   color: #777;
-}
+}*/
