--- a/pages/component/category/category.wxml
+++ b/pages/component/category/category.wxml
@@ -20,7 +20,7 @@
     <view class="categroy-right">
       <scroll-view scroll-y style="height:100%;"  bindscrolltolower="reachBottom" scroll-with-animation>
         <navigator wx:for="{{products}}" wx:key="{{index}}" url="../details/details?id={{item.id}}" class="scroll-view-right-item border_bottom">
-          <image mode="aspectFit" class="right-item-img" src="{{item.doc_image}}"/>
+          <image mode="aspectFill" class="right-item-img" src="{{item.doc_image}}"/>
           <view class="right-item-view">
             <text class="right-item-view-title medium_font color">{{item.title}}</text>
             <text class="right-item-view-title small_font color2">￥{{item.mark_price}}</text>
