--- a/pages/component/address/address.wxml
+++ b/pages/component/address/address.wxml
@@ -1,9 +1,18 @@
 <view class="main">
     <view class="form-box">
         <form bindsubmit="formSubmit">
-            <input class="border_bottom medium_font" value="{{address.name}}" placeholder="姓名" bindinput="bindName"/>
-            <input class="border_bottom medium_font" type="number" value="{{address.phone}}" placeholder="电话号码" bindinput="bindPhone" />
-            <input class="border_bottom medium_font" value="{{address.detail}}" placeholder="详细地址" bindinput="bindDetail" class="address"/>
+            <view class="border_bottom medium_font">
+                <text>收货人：</text>
+                <input value="{{address.name}}" placeholder="请输入姓名" bindinput="bindName"/>
+            </view>
+            <view class="border_bottom medium_font">
+                <text>电话：</text>
+                <input type="number" value="{{address.phone}}" placeholder="请输入电话号码" bindinput="bindPhone" />
+            </view>
+            <view class="border_bottom medium_font">
+                <text>地址：</text>
+                <input value="{{address.detail}}" placeholder="请输入详细地址" bindinput="bindDetail"/>
+            </view>
             <button form-type="submit" class="bg_color">保存</button><button bindtap="toBack">取消</button>
         </form>
     </view>
